--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-table": "^8.11.8",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
@@ -51,8 +52,6 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "recharts": "^2.10.4",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -60,12 +59,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.24",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.5.6",
     "prisma": "^5.8.1",
-    "tailwindcss": "^3.4.0",
     "tsx": "^4.7.0",
     "typescript": "^5"
   },
